--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,14 @@
 {{ define "main" }}
-  <h1 class="text-2xl text-red-400">{{ .Title }}</h1>
+<h1 class="text-2xl text-red-400 text-center ">{{ .Title }}</h1>
+<div class="text-center text-lg">
   {{ .Content }}
-  {{ range .Pages }}
-    <h2 class="text-xl text-orange-400"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+</div>
+<div class="p-16 -my-6">
+    {{ range .Pages }}
+    <a href="{{ .Permalink }}" class="block p-6 my-6 bg-gray-100 rounded-xl shadow-xl hover:shadow-2xl transition-shadow duration-300">
+        <h2 class="text-2xl font-bold">{{ .Title }}</h2>
+        <p class="text-xl">{{ .Params.description }}</p>
+    </a>
+    {{ end }}
+</div>
 {{ end }}
