--- a/base.css
+++ b/base.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @font-face {
     font-family: 'Black Chancery';
     src: url('../fonts/blackchancery.ttf') format('truetype');
@@ -13,6 +14,60 @@
     }
 }
 
+body {
+    background-color: #fff;
+    background-size: 100% 1.2em;
+    background-image: -webkit-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -webkit-linear-gradient(#eee .05em, transparent .05em);
+    background-image: -moz-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -moz-linear-gradient(#eee .05em, transparent .05em);
+    background-image: -ms-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -ms-linear-gradient(#eee .05em, transparent .05em);
+    background-image: -o-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -o-linear-gradient(#eee .05em, transparent .05em);
+    background-image: linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), linear-gradient(#eee .05em, transparent .05em);
+}
+
+
 img {
     @apply block mx-auto w-1/2;
+}
+
+#card-container {
+    @apply relative w-screen h-screen;
+}
+
+.card-info {
+    /* neg translate x 1/2 meaning move back half of the width*/
+    @apply absolute   -translate-x-1/2 left-1/2 top-1/2 -translate-y-1/2 ;
+}
+
+.card {
+    @apply absolute left-1/2 top-1/3;
+    width: 300px;
+    height: 400px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    @apply border-8;
+}
+
+.image-background {
+    @apply w-full h-full  cursor-pointer ;
+}
+
+
+#card-container .card:hover::before {
+    opacity: 1;
+}
+
+#card-container .card::before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: inherit;
+    background: radial-gradient(10rem circle at var(--xPos) var(--yPos), rgba(162, 155, 155, 0.95), transparent 95%);
+    opacity: 0;
+    transition: all 0.15s ease-in-out;
+
 }
