--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<!--<p class="text-center">Copyright {{ now.Year }}. All rights reserved.</p>-->
