--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,13 +2,12 @@
 <html lang="{{ or site.Language.LanguageCode site.Language.Lang }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
   {{ partial "head.html" . }}
-  <script src="hammer.min.js"></script>
 </head>
 <body >
   <header class="relative">
     {{ partial "header.html" . }}
   </header>
-  <main>
+  <main class="my-3">
     {{ block "main" . }}{{ end }}
   </main>
   <footer>
