--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,7 +1,19 @@
 {{ define "main" }}
-  {{ .Content }}
-  {{ range site.RegularPages }}
-    <h2 class="text-3xl text-red-600" ><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+
+<script src="hammer.min.js"></script>
+<div id="card-container">
+    {{ range .Pages }}
+    <div class="card">
+        <div class="glowing-mask"></div>
+        <div class="card-info">
+            <a class="underline" href="{{ .Permalink }}">
+                <h2 class="text-2xl">{{ .Title }}</h2>
+            </a>
+        </div>
+        <img src="border-2.jpg" alt="{{ .Title }}" draggable="false" class="image-background">
+    </div>
+    {{ end }}
+
+</div>
+
 {{ end }}
