--- a/base.css
+++ b/base.css
@@ -129,3 +129,11 @@ img {
 .tag:hover::after {
     border-left-color: crimson;
 }
+
+pre > code {
+    @apply  whitespace-pre-wrap;
+}
+
+p > img {
+    @apply block mx-auto w-11/12;
+}
