--- a/base.css
+++ b/base.css
@@ -137,3 +137,24 @@ pre > code {
 p > img {
     @apply block mx-auto w-11/12;
 }
+.toc-link {
+    @apply hover:underline hover:text-green-500
+    hover:pl-2
+    ease-in-out
+    transition-all
+    text-gray-300
+
+}
+
+.toc-link.is-active-link {
+    @apply underline;
+}
+
+.toc-link.is-active-link::before {
+    @apply inline-block bg-rose-900  w-1 h-1/3   mr-2
+}
+.toc-link::before {
+    @apply inline-block bg-rose-300  w-1  h-1/3 mr-2
+}
+
+
